[gd_scene load_steps=4 format=3 uid="uid://bnjepvx22njm"]

[ext_resource type="Script" uid="uid://7mofrhxxf5rv" path="res://scripts/ui/postWave/level_up_choice_ui.gd" id="1_etpg8"]
[ext_resource type="PackedScene" uid="uid://c33hydydkbw3n" path="res://scenes/ui/postWave/LevelUpRewardCard.tscn" id="1_hwea7"]
[ext_resource type="Resource" uid="uid://cyn4e3u8cebxn" path="res://datas/rewards/upgrades/test_levelup.tres" id="3_y21pl"]

[node name="LevelUpChoiceUi" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)
script = ExtResource("1_etpg8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "升级！"

[node name="CardContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LevelUpRewardCard" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CardContainer" instance=ExtResource("1_hwea7")]
layout_mode = 2
preview_data = ExtResource("3_y21pl")

[node name="LevelUpRewardCard2" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CardContainer" instance=ExtResource("1_hwea7")]
layout_mode = 2
preview_data = ExtResource("3_y21pl")

[node name="LevelUpRewardCard3" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CardContainer" instance=ExtResource("1_hwea7")]
layout_mode = 2
preview_data = ExtResource("3_y21pl")

[node name="LevelUpRewardCard4" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/CardContainer" instance=ExtResource("1_hwea7")]
layout_mode = 2
preview_data = ExtResource("3_y21pl")

[node name="RerollButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "刷新 (消耗 X 金币)"
